--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="/lib/main.css" media="screen" title="no title">
-  <title>Game Time</title>
+  <title>CatDog!</title>
 
 </head>
 <body>
