--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 </head>
 <body>
-  <canvas id="bg-layer" style={{ position: "absolute" }} width="1250" height="650" ></canvas>
-  <canvas id="fg-layer" style={{ position: "absolute" }} width="1250" height="650" ></canvas>
-  <canvas id="hud-layer" style={{ position: "absolute" }} width="1250" height="300"></canvas>
+  <canvas id="bg-layer" width="1250" height="650" ></canvas>
+  <canvas id="fg-layer" width="1250" height="650" ></canvas>
+  <canvas id="hud-layer" width="1250" height="300"></canvas>
 
   <!-- <section class="about-section">
     <article class="Justin">
