--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="CatDog/lib/main.css" media="screen" title="no title">
+  <link rel="stylesheet" href="./lib/main.css" media="screen" title="no title">
   <title>CatDog!</title>
 
 </head>
